fix: 기존 테스트 성공하도록 수정